@@ -24,6 +24,8 @@ use POSIX ();
 use AnyEvent;
 use AnyEvent::Impl::Perl;
 
+$AnyEvent::MAX_SIGNAL_LATENCY = 1;
+
 print "ok 1\n";
 
 AnyEvent::detect; # force-load event model
@@ -60,17 +62,11 @@ my $w2 = AnyEvent->child (pid => 0, cb => sub {
    $cv2->broadcast;
 });
 
-my $error = AnyEvent->timer (after => 15, cb => sub {
+my $error = AnyEvent->timer (after => 5, cb => sub {
    print <<EOF;
 Bail out! No child exit detected. This is either a bug in AnyEvent or a bug in your Perl (mostly some windows distributions suffer from that): child watchers might not work properly on this platform. You can force installation of this module if you do not rely on child watchers, or you could upgrade to a working version of Perl for your platform.\n";
 EOF
    exit 0;
-});
-
-my $inter = AnyEvent->timer (after => 14, cb => sub {
-   print "not ok 5 # inter\n";
-   print "not ok 6 # inter\n";
-   $cv2->send;
 });
 
 $cv2->wait;
