@@ -1,6 +1,12 @@
 Revision history for Perl extension AnyEvent.
 
 	- improve perl 5.6 compatibility of the core event loop.
+        - nail the signal race problem in perl once and for all
+          (see $AnyEvent::MAX_SIGNAL_LATENCY).
+        - take advantage of Async::Interrupt if it is available.
+        - load Time::HiRes and Guard modules on demand only.
+        - add optional/recommended modules section to AnyEvent
+          documentation.
 
 4.83 Fri Jul 17 16:56:26 CEST 2009
 	- implement AnyEvent::Socket::getprotobyname.
